<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pager.HomePager.NotePager.NoteFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_small_spacing"
            android:layout_marginTop="@dimen/view_margin_small_spacing"
            android:text="@string/title_note"
            android:textAppearance="?attr/textAppearanceDisplayMedium" />

        <TextView
            android:id="@+id/note_alert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_margin_small_spacing"
            android:text="@string/note_alter" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/note_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/view_margin_small_spacing" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floating_action_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/Description"
        app:backgroundTint="?attr/customButton"
        app:tint="@color/black"
        app:srcCompat="@drawable/add_icon" />

    <TextView
        android:id="@+id/no_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_note"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>