<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_card"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/view_margin_small_spacing"
    android:layout_marginEnd="@dimen/view_margin_small_spacing"
    android:layout_marginBottom="@dimen/view_margin_small_spacing"
    android:backgroundTint="?attr/customBNVBackColor"
    android:clickable="true"
    android:orientation="vertical"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_small_spacing"
            android:layout_marginBottom="@dimen/view_margin_small_spacing"
            android:orientation="horizontal"
            android:paddingStart="@dimen/view_margin_normal_spacing"
            android:paddingEnd="@dimen/view_margin_normal_spacing">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/user_avatar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@drawable/profile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/view_margin_small_spacing"
                android:gravity="center|start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_username"
                    android:textColor="?attr/customFont"
                    android:textSize="@dimen/font_normal_size" />

                <TextView
                    android:id="@+id/slogan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/view_margin_small_spacing"
                    android:ellipsize="end"
                    android:maxLength="16"
                    android:text="@string/item_slogan" />
            </LinearLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/create_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/item_time"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_small_size" />
        </LinearLayout>

        <ImageView
            android:id="@+id/cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_margin_small_spacing"
            android:orientation="vertical"
            android:paddingStart="@dimen/view_margin_normal_spacing"
            android:paddingEnd="@dimen/view_margin_normal_spacing">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/item_title"
                android:textColor="?attr/customFont"
                android:textSize="@dimen/font_super_large_size" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/item_content"
                android:textColor="@color/gray"
                android:textSize="@dimen/font_normal_size" />

            <Button
                android:id="@+id/delete"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="@dimen/view_margin_small_spacing"
                android:backgroundTint="?attr/customButton"
                android:text="@string/item_delete"
                android:textColor="@color/black"
                app:icon="@drawable/delete_icon"
                app:iconTint="@color/black" />
        </LinearLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>